# take-home-test

./: .gitignore  README.md  analyze_errors.py  classify_logs.py  docker-compose.yml  go.mod  go.sum  pt_2_improvement_plan.md  pt_3_report.md  pyproject.toml  sqlc.yaml  test_baseline_gpt_4.1_2025_04_14_20251007_190032.json  test_baseline_gpt_5_2025_08_07_20251007_190507.json  test_baseline_gpt_5_mini_2025_08_07_20251007_190145.json  test_chain_of_thought_gpt_4.1_2025_04_14_20251007_190059.json  test_chain_of_thought_gpt_5_2025_08_07_20251007_190733.json  test_chain_of_thought_gpt_5_mini_2025_08_07_20251007_190332.json  test_different_prompt_gpt_4.1_2025_04_14_20251007_190038.json  test_different_prompt_gpt_5_2025_08_07_20251007_190544.json  test_different_prompt_gpt_5_mini_2025_08_07_20251007_190214.json  test_ensemble.json  test_ensemble_gpt_4.1_2025_04_14_20251007_190106.json  test_ensemble_gpt_5_2025_08_07_20251007_190831.json  test_ensemble_gpt_5_mini_2025_08_07_20251007_190421.json  test_few_shot_gpt_4.1_2025_04_14_20251007_190045.json  test_few_shot_gpt_5_2025_08_07_20251007_190645.json  test_few_shot_gpt_5_mini_2025_08_07_20251007_190242.json  test_improvements.py
.claude/: settings.local.json
cmd/backend/: main.go
cmd/classifier/: main.go
data/: dataset.csv  results.json  test_baseline.json  test_chain_of_thought.json  test_different_prompt.json  test_ensemble.json  test_few_shot.json
db/migrations/: 20250712032123_init.down.sql  20250712032123_init.up.sql
pkg/api/: api.go  handlers.go
pkg/campaignthreads/: campaignthreads.go  queries.sql
(+10 files in other folders)
