[project]
name = "log-classifier"
version = "0.1.0"
description = "Voice transcript log classifier using GPT-5"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["classify_logs.py"]

[tool.uv]
dev-dependencies = []